Add version to manifest
This is a new Home-Assistant requirement.

--- a/custom_components/ps4/manifest.json
+++ b/custom_components/ps4/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "ps4",
   "name": "Sony PlayStation 4",
+  "version": "1.0",
   "documentation": "https://www.home-assistant.io/integrations/ps4",
   "requirements": [],
   "codeowners": ["@nitobuendia"]
