--- a/experiments/hue/manifest.json
+++ b/experiments/hue/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "hue",
   "name": "Philips Hue",
+  "version": "1.0",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/hue",
   "requirements": ["aiohue==2.1.0"],
