--- a/experiments/ps4/manifest.json
+++ b/experiments/ps4/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "ps4",
   "name": "Sony PlayStation 4",
+  "version": "1.0",
   "documentation": "https://www.home-assistant.io/integrations/ps4",
   "requirements": [],
   "codeowners": ["@nitobuendia"]
